feat: endpoint for change default password
